# De-Koi

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  ASSET_CREDITS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.web  GRAPHIFY.md  NOTICE.md  PRODUCT.md  README.md  SECURITY.md  docker-compose.pi.trusted-lan.yml  docker-compose.pi.yml  docker-compose.vds.yml  docker-compose.yml  eslint.config.js  eslint.full-report.config.js  index.html  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  start-main.cmd  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
docs/: Codex skill follow-ups.md  REFACTOR_PARITY_PIPELINE.md  canonical-memory-architecture.md  card-css-theming-guide.md  conversation-prompt-benchmark.md  conversation-prompt-linkapi-results.json  database-schema.md  deki-approval-transition.md  deki-json-command-runtime-architecture.md  impersonate-prompt-benchmark.md  impersonate-prompt-linkapi-results.json  legacy-database-schema.md  memory-recall-evaluation-phase-7.md  performance-diagnostics.md  pi-bare-metal.md  pi.md  profile-export-format-v2.md  release-readiness-checklist.md  release-update-strategy.md  (+5 more)
src-tauri/crates/sidecar/: Cargo.toml
src-tauri/crates/sidecar/src/: lib.rs
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/benches/: journal_compaction.rs
src-tauri/crates/storage/src/: append_journal.rs  cache.rs  chat_summaries.rs  journal.rs  lib.rs  messages.rs  projection.rs  streaming.rs  transaction.rs  write_gate.rs
(+1789 files in other folders)
