[package]
name = "marinara-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
marinara-core = { path = "../core" }
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync", "time"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
