[package]
name = "marinara-storage"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bench]]
name = "journal_compaction"
harness = false

[dependencies]
marinara-core = { path = "../core" }
marinara-security = { path = "../security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
